test/invalid-syntax/58219_missing_parantheses/missing_parantheses.agu
-- Author: 58219, Mariana Costa
-- Syntactic error: missing parentheses

let add (a, b) : (Int, Int) -> Int =
    a + b

let _ : Unit = print add(5, 10)